@@ -36,4 +36,11 @@ config EXAMPLES_TOUCHSCREEN_NSAMPLES
 		Otherwise, this number of samples is collected and the program
 		terminates.  Default:  Zero (Samples are collected indefinitely).
 
+config EXAMPLES_TOUCHSCREEN_MOUSE
+	bool "Mouse interface"
+	default n
+	---help---
+		The touchscreen test can also be configured to work with a mouse
+		driver by setting this option.
+
 endif
