@@ -59,6 +59,8 @@
  *   and this value is ignored.  Otherwise, this number of samples is
  *   collected and the program terminates.  Default:  Zero (Samples are collected
  *   indefinitely).
+ * CONFIG_EXAMPLES_TOUCHSCREEN_MOUSE - The touchscreen test can also be
+ *   configured to work with a mouse driver by setting this option.
  */
 
 #ifndef CONFIG_INPUT
@@ -68,13 +70,21 @@
 #ifndef CONFIG_EXAMPLES_TOUCHSCREEN_MINOR
 #  undef  CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH
 #  define CONFIG_EXAMPLES_TOUCHSCREEN_MINOR 0
-#  define CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH "/dev/input0"
+#  ifdef CONFIG_EXAMPLES_TOUCHSCREEN_MOUSE
+#    define CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH "/dev/mouse0"
+#  else
+#    define CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH "/dev/input0"
+#  endif
 #endif
 
 #ifndef CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH
 #  undef  CONFIG_EXAMPLES_TOUCHSCREEN_MINOR
 #  define CONFIG_EXAMPLES_TOUCHSCREEN_MINOR 0
-#  define CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH "/dev/input0"
+#  ifdef CONFIG_EXAMPLES_TOUCHSCREEN_MOUSE
+#    define CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH "/dev/mouse0"
+#  else
+#    define CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH "/dev/input0"
+#  endif
 #endif
 
 #ifndef CONFIG_EXAMPLES_TOUCHSCREEN_NSAMPLES
