@@ -1,7 +1,7 @@
 /****************************************************************************
  * examples/touchscreen/tc_main.c
  *
- *   Copyright (C) 2011 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2011, 2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -48,6 +48,10 @@
 #include <errno.h>
 #include <debug.h>
 
+#ifdef CONFIG_EXAMPLES_TOUCHSCREEN_MOUSE
+#  include <nuttx/input/mouse.h>
+#endif
+
 #include <nuttx/input/touchscreen.h>
 
 #include "tc.h"
@@ -86,7 +90,11 @@
 
 int tc_main(int argc, char *argv[])
 {
+#ifdef CONFIG_EXAMPLES_TOUCHSCREEN_MOUSE
+  struct mouse_report_s sample;
+#else
   struct touch_sample_s sample;
+#endif
   ssize_t nbytes;
 #if defined(CONFIG_NSH_BUILTIN_APPS) || CONFIG_EXAMPLES_TOUCHSCREEN_NSAMPLES > 0
   long nsamples;
@@ -153,6 +161,44 @@ int tc_main(int argc, char *argv[])
 
     msgflush();
 
+#ifdef CONFIG_EXAMPLES_TOUCHSCREEN_MOUSE
+    /* Read one sample */
+
+    ivdbg("Reading...\n");
+    nbytes = read(fd, &sample, sizeof(struct mouse_report_s));
+    ivdbg("Bytes read: %d\n", nbytes);
+
+    /* Handle unexpected return values */
+
+    if (nbytes < 0)
+      {
+        errval = errno;
+        if (errval != EINTR)
+          {
+            message("tc_main: read %s failed: %d\n",
+                    CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH, errval);
+            errval = 3;
+            goto errout_with_dev;
+          }
+
+        message("tc_main: Interrupted read...\n");
+      }
+    else if (nbytes != sizeof(struct mouse_report_s))
+      {
+        message("tc_main: Unexpected read size=%d, expected=%d, Ignoring\n",
+                nbytes, sizeof(struct mouse_report_s));
+      }
+
+    /* Print the sample data on successful return */
+
+    else
+      {
+        message("Sample     :\n");
+        message("   buttons : %02x\n", sample.buttons);
+        message("         x : %d\n",   sample.x);
+        message("         y : %d\n",   sample.y);
+      }
+#else
     /* Read one sample */
 
     ivdbg("Reading...\n");
@@ -177,7 +223,7 @@ int tc_main(int argc, char *argv[])
     else if (nbytes != sizeof(struct touch_sample_s))
       {
         message("tc_main: Unexpected read size=%d, expected=%d, Ignoring\n",
-                nbytes, sizeof(struct touch_sample_s));        
+                nbytes, sizeof(struct touch_sample_s));
       }
 
     /* Print the sample data on successful return */
@@ -195,6 +241,7 @@ int tc_main(int argc, char *argv[])
         message("         w : %d\n",   sample.point[0].w);
         message("  pressure : %d\n",   sample.point[0].pressure);
       }
+#endif
   }
 
 errout_with_dev:
